[package]
name = "pyrunner"
version = "0.1.0"
edition = "2024"

[lib]
name = "pr"
crate-type = ["cdylib"]

[[bin]]
name = "pyrunner_demo"
path = "src/main.rs"

[dependencies]
jni = "0.21.1"
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal"] }
ipc-channel = "0.20"
bincode = "1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

[dev-dependencies]
bindgen = "0.72.1"
